deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: build-site-web
  namespace: app1
  labels:
    app: build-site-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: build-site-web
  template:
    metadata:
      labels:
        app: build-site-web
    spec:
      imagePullSecrets:
        - name: nexus-proxy-secret        # ← the secret you created in Step 3
      containers:
        - name: build-site-web
          image: 127.0.0.1:5000/dummysite:latest
          imagePullPolicy: Always   # ← always pull fresh from Nexus
          ports:
            - containerPort: 80     # ← change to your app's port
