service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummysite
  labels:
    app: dummysite
spec:
  type: NodePort
  selector:
    app: dummysite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
