ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummysite-ingress
  namespace: app1
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: dummysite.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummysite
                port:
                  number: 80
